feat: add mongodb integration and owner stats command

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,9 @@ COMMAND_PREFIX=!
 
 # Interval in minutes for checking remote Git updates
 GIT_POLL_INTERVAL_MINUTES=5
+
+# MongoDB connection URI
+MONGODB_URI=mongodb://localhost:27017/your_database_name
+
+# Comma-separated Discord user IDs allowed to run owner-only commands
+BOT_OWNER_IDS=123456789012345678,987654321098765432
