--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
+    "mongodb": "^6.6.0",
     "simple-git": "^3.27.0"
   }
 }
